# nu_plugin_port_extension

./: Cargo.toml  LICENSE  README.md  build.nu  nupm.nuon
.github/workflows/: dependency-update.yaml
src/: main.rs
src/commands/: mod.rs
src/commands/list/: config.rs  connection_info.rs  mod.rs  plugin.rs  port_list.rs
src/commands/scan/: mod.rs  plugin.rs  scan.rs  scan_config.rs  scan_result.rs
src/helpers/: general_value.rs  has_flag_or.rs  mod.rs
