[package]
name = "nu_plugin_port_extension"
version = "0.108.0"
description = "A nushell plugin to list all active connections and scanning ports on a target address"
homepage = "https://github.com/FMotalleb/nu_plugin_port_list"
keywords = [
    "nushell",
    "network",
    "plugin",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/FMotalleb/nu_plugin_port_list"
edition = "2024"

[dependencies]
derive_builder = "0.20.2"
derive-getters = "0.5.0"
netstat2 = "0.11.1"
sysinfo = "0.36.1"

[dependencies.nu-plugin]
version = "0.108.0"

[dependencies.nu-protocol]
features = ["plugin"]
version = "0.108.0"
